fixed some stretch issues on the css for the collection search modal

--- a/AppCode/taga-CSS/collections-CSS/collections-search-collections-modal.css
+++ b/AppCode/taga-CSS/collections-CSS/collections-search-collections-modal.css
@@ -252,7 +252,7 @@
   cursor: pointer;
   display: grid;
   grid-template-columns: 2fr 4fr;
-  grid-template-rows: 1fr 11fr;
+  grid-template-rows: 2fr 12fr;
   box-sizing: border-box;
   grid-template-areas:
     "    collection-name-result-div-class                  collection-name-result-div-class  "
@@ -264,35 +264,35 @@
   display: inline-block;
   /* justify-content: left;
   align-items: center; */
-  font-size: 1.5rem;
-
-  line-height: 1.8rem;
-  height: 2rem;
+  font-size: 2.5vmin;
+  z-index: 2;
   background-color: #00c600;
   height: 100%;
-  overflow-x: scroll;
+  overflow-x: auto;
   white-space: nowrap;
 }
 
 .collection-profileimage-search-div {
+  grid-area: collection-profileimage-search-div;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .collections-modal-search-result-collection-profileimg-class {
-  grid-area: collections-modal-search-thumbnail-img;
+  /* grid-area: collections-modal-search-thumbnail-img; */
   box-sizing: border-box;
-
+  z-index: 1;
+  position: relative;
   object-fit: fill;
-
+  padding: 4px;
   /* height: 99999px;
   object-fit: contain; */
   /* position: relative; */
   max-width: 100%;
-  max-height: 26vh; /*100%;*/
+  max-height: 25vh; /*100%;*/
 }
 
 .collections-search-result-collections-img-set-class {
@@ -300,8 +300,8 @@
   /* background-color: crimson; */
   padding-left: 8px;
   width: 98%;
-  max-height: 27vh; /* height: 100%; */
-
+  max-height: 25vh; /* height: 100%; */
+  z-index: 3;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
